# bam_rs

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml
notebook/: README.md  notebook.py  pyproject.toml  style.css
notebook/__marimo__/session/: notebook.py.json
src/: args.rs  bam.rs  errors.rs  fasta.rs  main.rs  mod.rs  pileup.rs  reference.rs  seq.rs  utils.rs
