[package]
name = "bam_rs"
version = "0.0.1"
edition = "2024"

[dependencies]
rust-htslib = { version = "0.49.0" }
clap = { version = "4.5.37", features = ['derive'] }
rayon = { version = "1.10.0" }
fxhash = { version = "0.2.1" }
thiserror = { version = "2.0.12" }
log = { version = "0.4.27" }
simple_logger = { version = "5.0.0" }
